--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body onload="main()">
     <h1>Snake Game</h1>
+    <div id="scoreBoard"></div>
     <div id="grid"></div>
   </body>
 </html>
